# nullscope

./: .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: release.yml  test.yml
benchmarks/: BASELINE.md  bench_core.py
docs/: comparison.md  design.md  examples.md
src/nullscope/: __init__.py
src/nullscope/adapters/: opentelemetry.py
tests/: test_core.py  test_integration.py  test_otel.py
